Reduce unnecessary parameter value re-processing in type inference